Fix [Create function] Long label overflows the panel (#646)

--- a/src/common/ChipCell/chipCell.scss
+++ b/src/common/ChipCell/chipCell.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex: 1;
     align-items: center;
+    max-width: 100%;
 
     .chip {
       &_short {
