--- a/src/elements/ChipForm/chipForm.scss
+++ b/src/elements/ChipForm/chipForm.scss
@@ -5,6 +5,7 @@
 .edit-chip {
   &-container {
     display: inline-flex;
+    max-width: 100%;
     margin: 2px 4px;
     padding: 0 8px;
     font-size: 14px;
